# worldcup-pool-optimizer

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_pool_config_scoring_mode.py  0003_add_correct_winner_any_team_goals_rule.py  0003_winner_any_team_goals.py  0004_winner_only.py  0005_drop_dead_tables.py
backend/app/: main.py  seed.py
backend/app/api/: auth.py  deps.py  exports.py  health.py  matches.py  model_runs.py  odds.py  pool_configs.py  settings.py
backend/app/core/: config.py  defaults.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  exports.py  matches.py  model_runs.py  odds.py  pool_configs.py
backend/app/services/: diagnostics.py  export_service.py  jobs.py  odds_normalization.py  odds_provider_base.py  odds_provider_the_odds_api.py  optimizer.py  poisson_model.py  schedule_service.py  score_model.py  scoring.py
backend/tests/: conftest.py  test_api_auth.py  test_api_matches.py  test_exports.py  test_normalization.py  test_optimizer.py  test_poisson.py  test_score_model.py  test_scoring.py
docs/: TECHNICAL_AUDIT.md
frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  exports.ts  matches.ts  modelRuns.ts  odds.ts  poolConfigs.ts
(+34 files in other folders)
